--- a/SharpShooter/SharpShooter.csproj
+++ b/SharpShooter/SharpShooter.csproj
@@ -59,17 +59,26 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
+    <Reference Include="clipper_library">
+      <HintPath>C:\SHARP\References\clipper_library.dll</HintPath>
+    </Reference>
     <Reference Include="LeagueSharp">
-      <HintPath>C:\Program Files (x86)\O46HgaACH\References\LeagueSharp.dll</HintPath>
+      <HintPath>C:\SHARP\References\LeagueSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
-      <HintPath>C:\Program Files (x86)\O46HgaACH\References\LeagueSharp.Common.dll</HintPath>
+      <HintPath>C:\SHARP\References\LeagueSharp.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="LeagueSharp.Data">
+      <HintPath>C:\SHARP\References\LeagueSharp.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="SebbyLib">
+      <HintPath>C:\SHARP\References\SebbyLib.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>C:\Program Files (x86)\O46HgaACH\References\SharpDX.dll</HintPath>
+      <HintPath>C:\SHARP\References\SharpDX.dll</HintPath>
     </Reference>
-    <Reference Include="SPrediction">
-      <HintPath>C:\Program Files (x86)\O46HgaACH\References\SPrediction.dll</HintPath>
+    <Reference Include="SharpDX.Direct3D9">
+      <HintPath>C:\SHARP\References\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
